# HttpServerClient

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Client/: CMakeLists.txt  ClientParser.h  HttpClient.cpp  HttpClient.h  main.cpp
Client/Files/: read.txt  sent.txt
Files/: to_modify.txt  write.txt
Messages/: HttpMessage.cpp  HttpMessage.h  Parser.cpp  Parser.h  Request.cpp  Request.h  Response.cpp  Response.h
Server/: CMakeLists.txt  HttpHandler.cpp  HttpHandler.h  HttpServer.cpp  HttpServer.h  IOHandler.cpp  IOHandler.h  PortHandler.cpp  PortHandler.h  main.cpp
Server/Files/: index.html  sent.txt
Server/Tests/: Test_Module.cpp
Test/: server.cpp
Tests/: ClientTests.cpp  IOHandlerTests.cpp  MessagesTests.cpp  ParserTests.cpp  ServerTests.cpp  Test_IOHandler.cpp  Test_Module.cpp  main.cpp
Util/: IOHandler.cpp  IOHandler.h  Parser.cpp  Parser.h  PortHandler.cpp  PortHandler.h
generic-server/: client  client.cpp  d  server  server.txt
generic-server/Client/: CMakeLists.txt
generic-server/Server/: HttpHandler.cpp  HttpHandler.h  PortHandler.cpp  PortHandler.h  main.cpp
generic-server/utilities/: Msg_Parser.cpp  Msg_Parser.h
src/: client.cpp  server.cpp
src/client-module/: HttpClient.cpp  HttpClient.h
src/http-messages/: HttpMessage.h  Request.cpp  Response.cpp
src/server-module/: ConnectionHandler.cpp  ConnectionHandler.h  HttpServer.cpp  HttpServer.h
src/utilities/: Parser.cpp  Parser.h
util/: IOHandler.cpp  IOHandler.h  PortHandler.cpp
